// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton />  should adopt button types 1`] = `
<button
  aria-label="Does an action"
  class="jZIabh"
  title="Does an action"
  type="submit"
>
  <span
    class="vwFqP"
    color="currentColor"
    display="block"
  >
    <svg
      class="hfAVjD"
      height="100%"
      preserveaspectratio="xMidYMid meet"
      title="ADD"
      viewbox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</button>
`;

exports[`<IconButton />  should match baseline snapshot 1`] = `
<button
  aria-label="Does an action"
  class="jZIabh"
  title="Does an action"
  type="button"
>
  <span
    class="vwFqP"
    color="currentColor"
    display="block"
  >
    <svg
      class="hfAVjD"
      height="100%"
      preserveaspectratio="xMidYMid meet"
      title="ADD"
      viewbox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</button>
`;
